# masker-voice-agents-hack

./: .env.example  .gitignore  CONTRIBUTORS.md  GEMMA_AUDIO_COMMANDS.md  MASKER_README.md  README.md  requirements.txt
aurora/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
aurora/android/: settings.gradle
aurora/android/app/: build.gradle
aurora/ios/: Podfile
aurora/ios/Aurora/: Info.plist
aurora/ios/Aurora.xcodeproj/: project.pbxproj
aurora/src/components/: AuroraBackground.tsx  BreathingOrb.tsx  DisclaimerModal.tsx  DownloadProgress.tsx  Header.tsx  MicButton.tsx  TranscriptCard.tsx
aurora/src/constants/: safety.ts  systemPrompt.ts
aurora/src/hooks/: useSpeechInput.ts  useTTS.ts  useTherapist.ts
aurora/src/screens/: ConversationScreen.tsx  OnboardingScreen.tsx
aurora/src/state/: conversationReducer.ts  types.ts
aurora/src/theme/: colors.ts  spacing.ts  typography.ts
dashboard/: next.config.mjs  package-lock.json  tailwind.config.ts
dashboard/app/: error.tsx  layout.tsx  loading.tsx
dashboard/app/api-keys/: page.tsx
dashboard/app/api/copilot/: route.ts
dashboard/app/api/policies/: route.ts
dashboard/app/api/sessions/: route.ts
dashboard/app/audit-reports/: page.tsx
dashboard/app/copilot/: CopilotClient.tsx  page.tsx
dashboard/app/kms/: page.tsx
dashboard/app/overview/: OverviewCharts.tsx  page.tsx
dashboard/app/policies/: page.tsx
dashboard/app/sessions/: SessionsClient.tsx  page.tsx
dashboard/app/sessions/[id]/: page.tsx
dashboard/components/layout/: PageShell.tsx  Sidebar.tsx  Topbar.tsx
dashboard/components/ui/: Button.tsx  MetricCard.tsx
dashboard/lib/: api.ts  mock-data.ts  types.ts
docs/wiki/: CODEX_HANDOFF.md
masker/: README.md  __init__.py  contracts.py  demo.py  detection.py  example_privacy.py  gemma_wrapper.py  masking.py  policy.py  privacy.py  router.py  trace.py  voice_loop.py
masker-rs/: .gitignore  Cargo.toml  README.md
masker-rs/crates/masker/: Cargo.toml
masker-rs/crates/masker-cli/: Cargo.toml
masker-rs/crates/masker-cli/src/: main.rs
masker-rs/crates/masker/src/: contracts.rs  detection.rs  lib.rs  masking.rs  policy.rs  router.rs  trace.rs  voice_loop.rs
masker-rs/crates/masker/src/backends/: cactus.rs  gemini.rs  mod.rs  stub.rs
masker-rs/crates/masker/tests/: integration.rs
masker-sdk/masker-python-sdk/: pyproject.toml
masker-sdk/masker-python-sdk/masker/: __init__.py  _cli.py
pitch-deck/: index.html
platform/masker-admin/: .env.example  middleware.ts  package-lock.json  package.json
platform/masker-admin/app/: globals.css  layout.tsx
platform/masker-admin/app/api-keys/: page.tsx
platform/masker-admin/app/audit-reports/: page.tsx
platform/masker-admin/app/kms/: page.tsx
platform/masker-admin/app/login/: LoginClient.tsx
platform/masker-admin/app/onboarding/: OnboardingClient.tsx
platform/masker-admin/app/overview/: page.tsx
platform/masker-admin/app/policies/: page.tsx
platform/masker-admin/drizzle/: 0001_schema.sql
platform/masker-admin/supabase/: schema.sql
platform/masker-core/: Cargo.toml  README.md
platform/masker-core/crates/masker-cli/src/: main.rs
platform/masker-core/crates/masker/src/: audio_pipeline.rs  audit_logger.rs  cactus_sdk.rs  contracts.rs  crypto.rs  detection.rs  lib.rs  policy.rs
platform/masker-core/crates/masker/tests/: nemotron_audio_stream.rs
platform/masker-core/crates/stream-privacy-engine/: Cargo.toml  NEXT_STEPS.md  README.md
platform/masker-core/crates/stream-privacy-engine/examples/: simulate_stream.rs
platform/masker-core/crates/stream-privacy-engine/src/: assembler.rs  audit.rs  engine.rs  events.rs  learned_detector.rs  lib.rs  models.rs  normalizer.rs  policy.rs  triggers.rs
platform/masker-core/crates/stream-privacy-engine/tests/: test_assembler_phone.rs  test_assembler_ssn.rs  test_engine_streaming.rs  test_normalizer.rs  test_triggers.rs
platform/masker-core/scripts/: cactus-npu-env.sh
platform/masker-library/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
platform/masker-library/demos/: finance.txt  healthcare.txt  phone_address.txt
platform/masker-library/masker/: __init__.py  _pure.py  contracts.py
platform/masker-library/masker_demo/: __init__.py  __main__.py  app.py  audio.py  benchmark.py  config.py  demo_cli.py  demo_ui.py  events.py  gemma.py  logging_safe.py  models.py  redactor.py  session.py  settings.py  stt.py  vad.py
platform/masker-library/scripts/: generate_demo_audio.sh
platform/masker-library/tests/: test_event_schema.py  test_redactor.py
prompts/: CODEX.md  ONA.md
tests/: test_integration.py
training/: Gemma4_E4B_Nemotron_PII.ipynb  config.py  load_for_cactus.sh  requirements.txt  train_gemma4_nemotron_pii.py
ui/: HANDOFF.md  package-lock.json
ui/src/: App.css  App.tsx  explanation.ts  index.css  scenarios.ts  types.ts
ui/src/components/: EntityList.tsx  RouteBadge.tsx  TraceLog.tsx  TracePanel.tsx
(+42 files in other folders)
