[workspace]
resolver = "2"
members = ["crates/masker", "crates/masker-cli", "crates/stream-privacy-engine"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Masker Hack Team"]
repository = "https://github.com/navi25/masker-voice-agents-hack"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
