[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masker-demo"
version = "0.1.0"
description = "Local-first live transcription and redaction demo backend for Masker"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["masker_demo"]
